welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:-4: error: Unmatched closing brace '}' ignored here
	}
        ^Program:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^